--- a/x-pack/plugin/snapshot-repo-test-kit/qa/azure/build.gradle
+++ b/x-pack/plugin/snapshot-repo-test-kit/qa/azure/build.gradle
@@ -60,6 +60,23 @@ tasks.named("managedIdentityJavaRestTest") {
   nonInputProperties.systemProperty 'test.azure.base_path', azureBasePath + "_repository_test_kit_tests_" + BuildParams.testSeed
 }
 
+tasks.register("workloadIdentityJavaRestTest", RestIntegTestTask) {
+  testClassesDirs = sourceSets.javaRestTest.output.classesDirs
+  classpath = sourceSets.javaRestTest.runtimeClasspath
+}
+
+tasks.named("workloadIdentityJavaRestTest") {
+  systemProperty 'test.azure.fixture', Boolean.toString(useFixture)
+  systemProperty 'test.azure.account', azureAccount
+  systemProperty 'test.azure.container', azureContainer
+  // TODO
+  systemProperty 'test.azure.tenant_id', "test_tenant_id"
+  systemProperty 'test.azure.client_id', "test_client_id"
+  // omitting key and sas_token so that we use a bearer token from the oauth token service
+  nonInputProperties.systemProperty 'test.azure.base_path', azureBasePath + "_repository_test_kit_tests_" + BuildParams.testSeed
+}
+
 tasks.named("check") {
   dependsOn("managedIdentityJavaRestTest")
+  dependsOn("workloadIdentityJavaRestTest")
 }
